AXIS2-1115 Contributor: Nikhil Thaker
Fixed the problem by adding a DescriptionRegistry to store the various instances of ServiceDescription objects.